[gd_scene load_steps=31 format=2]

[ext_resource path="res://mainMenu/startPress.png" type="Texture" id=1]
[ext_resource path="res://mainMenu/about.png" type="Texture" id=2]
[ext_resource path="res://mainMenu/exitPress.png" type="Texture" id=3]
[ext_resource path="res://mainMenu/fire_particle.png" type="Texture" id=4]
[ext_resource path="res://mainMenu/logo.png" type="Texture" id=5]
[ext_resource path="res://mainMenu/exit.png" type="Texture" id=6]
[ext_resource path="res://mainMenu/aboutPress.png" type="Texture" id=7]
[ext_resource path="res://mainMenu/settings.png" type="Texture" id=8]
[ext_resource path="res://mainMenu/start.png" type="Texture" id=9]
[ext_resource path="res://mainMenu/settingsPress.png" type="Texture" id=10]
[ext_resource path="res://mainMenu/background.jpg" type="Texture" id=11]
[ext_resource path="res://mainMenu/helpPress.png" type="Texture" id=12]
[ext_resource path="res://mainMenu/help.png" type="Texture" id=13]
[ext_resource path="res://mainMenu/MainMenuView.gd" type="Script" id=14]
[ext_resource path="res://mainMenu/backPress.png" type="Texture" id=15]
[ext_resource path="res://mainMenu/level1Press.png" type="Texture" id=16]
[ext_resource path="res://mainMenu/level0Press.png" type="Texture" id=17]
[ext_resource path="res://mainMenu/level1.png" type="Texture" id=18]
[ext_resource path="res://mainMenu/back.png" type="Texture" id=19]
[ext_resource path="res://mainMenu/level0.png" type="Texture" id=20]
[ext_resource path="res://mainMenu/fullscreen.png" type="Texture" id=21]
[ext_resource path="res://mainMenu/arial.ttf" type="DynamicFontData" id=22]

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 22 )

[sub_resource type="DynamicFont" id=8]
size = 26
font_data = ExtResource( 22 )

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
gravity = Vector3( 0, -26, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 50.0
linear_accel_random = 1.0
damping = 2.0
scale = 0.12
scale_random = 0.3
scale_curve = SubResource( 2 )
color = Color( 0.803922, 0.14902, 0.14902, 1 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
gravity = Vector3( 0, -26, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 2.0
scale = 0.12
scale_random = 0.3
scale_curve = SubResource( 5 )
color = Color( 0.803922, 0.690196, 0.14902, 1 )

[node name="MainMenuView" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 514.379, 300.875 )
scale = Vector2( 0.437536, 0.393527 )
texture = ExtResource( 11 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 962.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
custom_constants/separation = 180
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 222.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="mainView" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 222.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
custom_constants/separation = 30

[node name="Start" type="TextureButton" parent="HBoxContainer/VBoxContainer/mainView"]
margin_right = 222.0
margin_bottom = 41.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/mainView"]
margin_top = 71.0
margin_right = 222.0
margin_bottom = 266.0
custom_constants/separation = 15

[node name="Settings" type="TextureButton" parent="HBoxContainer/VBoxContainer/mainView/VBoxContainer"]
margin_right = 222.0
margin_bottom = 59.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )

[node name="Help" type="TextureButton" parent="HBoxContainer/VBoxContainer/mainView/VBoxContainer"]
margin_top = 74.0
margin_right = 222.0
margin_bottom = 134.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About" type="TextureButton" parent="HBoxContainer/VBoxContainer/mainView/VBoxContainer"]
margin_top = 149.0
margin_right = 222.0
margin_bottom = 195.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 7 )

[node name="Exit" type="TextureButton" parent="HBoxContainer/VBoxContainer/mainView"]
margin_top = 296.0
margin_right = 222.0
margin_bottom = 340.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 3 )

[node name="StartView" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
visible = false
margin_right = 1066.0
margin_bottom = 361.0
custom_constants/separation = 200
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/StartView"]
margin_right = 1066.0
margin_bottom = 112.0
custom_constants/separation = 20

[node name="level0" type="TextureButton" parent="HBoxContainer/VBoxContainer/StartView/VBoxContainer"]
margin_right = 1066.0
margin_bottom = 46.0
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 17 )

[node name="level1" type="TextureButton" parent="HBoxContainer/VBoxContainer/StartView/VBoxContainer"]
margin_top = 66.0
margin_right = 1066.0
margin_bottom = 112.0
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 16 )

[node name="backStart" type="TextureButton" parent="HBoxContainer/VBoxContainer/StartView"]
margin_top = 312.0
margin_right = 1066.0
margin_bottom = 361.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 15 )

[node name="Settings" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
visible = false
margin_right = 784.0
margin_bottom = 595.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 300

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Settings"]
margin_right = 784.0
margin_bottom = 46.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer/Settings/HBoxContainer"]
margin_right = 446.0
margin_bottom = 46.0
texture = ExtResource( 21 )
stretch_mode = 1

[node name="CheckBox" type="CheckBox" parent="HBoxContainer/VBoxContainer/Settings/HBoxContainer/TextureRect"]
margin_left = 463.362
margin_top = -38.4142
margin_right = 487.362
margin_bottom = 7.58582
rect_scale = Vector2( 3, 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backSettings" type="TextureButton" parent="HBoxContainer/VBoxContainer/Settings"]
margin_top = 346.0
margin_right = 784.0
margin_bottom = 395.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 15 )

[node name="About" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
visible = false
margin_right = 784.0
margin_bottom = 436.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="Sprite" type="Sprite" parent="HBoxContainer/VBoxContainer/About"]

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/About/Sprite"]
margin_top = 4.0
margin_right = 784.0
margin_bottom = 383.0
custom_fonts/normal_font = SubResource( 7 )
custom_constants/line_separation = 5
text = "Portan Ignis is a puzzle-platformer adventure game developed for PC. The game takes place in a completely dark world. 
The main character has an Ignis (light sourse). He must use it for overcome the different obstacles and keep out of dangers 
hidden in the dark. One of the key mechanics in the game is using the light on the levels to solve some puzzles.

Developers:
Alexander Karasev
Aleksandr Mitenev
Nikita Schastlivtsev
Victor Kolesnik 
Elisey Vasilevskiy 

github: https://github.com/re1nex/portan-ignis
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackAbout" type="TextureButton" parent="HBoxContainer/VBoxContainer/About"]
margin_top = 387.0
margin_right = 784.0
margin_bottom = 436.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 15 )

[node name="Help" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
visible = false
margin_right = 784.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="Sprite" type="Sprite" parent="HBoxContainer/VBoxContainer/Help"]

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/Help/Sprite"]
margin_right = 805.0
margin_bottom = 372.0
custom_fonts/normal_font = SubResource( 8 )
custom_constants/line_separation = 10
text = "A/arrow left  - move left
D/arrow right - move right
W/space - jump
arrow up, arrow down - rotate ignis
E -interaction
R - recharge
1,2 - type of ignis"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backHelp" type="TextureButton" parent="HBoxContainer/VBoxContainer/Help"]
margin_top = 391.0
margin_right = 784.0
margin_bottom = 440.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 15 )

[node name="Logo" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 402.0
margin_right = 842.0
margin_bottom = 440.0

[node name="Logo" type="TextureRect" parent="HBoxContainer/Logo"]
margin_right = 440.0
margin_bottom = 345.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Particles2D" type="Particles2D" parent="HBoxContainer/Logo/Logo"]
position = Vector2( 50.6628, 205.605 )
amount = 32
process_material = SubResource( 3 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Particles2D2" type="Particles2D" parent="HBoxContainer/Logo/Logo/Particles2D"]
position = Vector2( -0.297729, 0.292633 )
amount = 32
process_material = SubResource( 6 )
texture = ExtResource( 4 )
[connection signal="pressed" from="HBoxContainer/VBoxContainer/mainView/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/mainView/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/mainView/VBoxContainer/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/mainView/VBoxContainer/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/mainView/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/StartView/VBoxContainer/level0" to="." method="_on_level0_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/StartView/VBoxContainer/level1" to="." method="_on_level1_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/StartView/backStart" to="." method="_on_backStart_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Settings/HBoxContainer/TextureRect/CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Settings/backSettings" to="." method="_on_backSettings_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/About/BackAbout" to="." method="_on_BackAbout_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Help/backHelp" to="." method="_on_backHelp_pressed"]
